Architecture improvements - working on the project CAS.CodeProtect, creating nuget package. Package contains old .dll 5.0.2 Tested.
Issue #: 4772

--- a/CAS.CodeProtect.UnitTests/CAS.CodeProtect.UnitTests.csproj
+++ b/CAS.CodeProtect.UnitTests/CAS.CodeProtect.UnitTests.csproj
@@ -7,7 +7,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CAS.Lib.CodeProtect.Tests</RootNamespace>
-    <AssemblyName>CAS.LibCodeProtectTests</AssemblyName>
+    <AssemblyName>CAS.Lib.CodeProtect.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -23,9 +23,10 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <NoWarn>IDE0001,IDE0001,IDE0003</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -68,7 +69,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BK.CodeProtect\BK.CodeProtect.csproj">
+    <ProjectReference Include="..\CAS.CodeProtect\CAS.CodeProtect.csproj">
       <Project>{5e8d8581-87ed-4f5a-bdeb-09a01e45d3cc}</Project>
       <Name>BK.CodeProtect</Name>
     </ProjectReference>
