--- a/CAS.CodeProtect/CAS.CodeProtect.csproj
+++ b/CAS.CodeProtect/CAS.CodeProtect.csproj
@@ -200,9 +200,18 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>AssemblyInfo.cs</LastGenOutput>
     </None>
+    <None Include="Properties\CodeProtect.Nuget.nuspec">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CodeProtect.Nuget.tt</DependentUpon>
+    </None>
     <None Include="Resources\keys.xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Properties\CodeProtect.Nuget.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>CodeProtect.Nuget.nuspec</LastGenOutput>
+    </Content>
     <Content Include="Packages\EN\package.xml" />
     <Content Include="Packages\Product.xml" />
     <Content Include="Properties\keys.xml" />
