--- a/CAS.CodeProtect.UnitTests/app.config
+++ b/CAS.CodeProtect.UnitTests/app.config
@@ -12,4 +12,4 @@
             </setting>
         </CAS.Lib.CodeProtect.Tests.Properties.Settings>
     </applicationSettings>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
