--- a/CAS.CodeProtect/CAS.CodeProtect.csproj
+++ b/CAS.CodeProtect/CAS.CodeProtect.csproj
@@ -71,6 +71,7 @@
     <Reference Include="Microsoft.Build.Tasks.v3.5" />
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
+    <Reference Include="System.Deployment" />
     <Reference Include="System.Management" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
