--- a/CAS.CodeProtect/CAS.CodeProtect.nuspec
+++ b/CAS.CodeProtect/CAS.CodeProtect.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>CAS.CodeProtect</id>
-    <version>5.0.2 </version>
+    <version>6.0.0-Alpha </version>
     <title>CAS.CodeProtect</title>
     <authors>CAS</authors>
     <owners>commsvr.com</owners>
@@ -23,6 +23,11 @@
     <tags>CAS Software, CAS Framework, CAS Library, Licensing.</tags>
   </metadata>
   <files>
+    <file src="bin\Release\CAS.CodeProtect.dll" target="lib\net451\CAS.CodeProtect.dll" />
+    <file src="bin\Release\CAS.CodeProtect.XML" target="lib\net451\CAS.CodeProtect.XML" />
+    <file src="bin\Release\Microsoft.Build.Framework.dll" target="lib\net451\Microsoft.Build.Framework.dll" />
+    <file src="bin\Release\Microsoft.Build.Tasks.Core.dll" target="lib\net451\Microsoft.Build.Tasks.Core.dll" />
+    <file src="bin\Release\Microsoft.Build.Utilities.Core.dll" target="lib\net451\Microsoft.Build.Utilities.Core.dll" />
   </files>
 </package>
 
