--- a/CAS.CodeProtect.UnitTests/CAS.CodeProtect.UnitTests.csproj
+++ b/CAS.CodeProtect.UnitTests/CAS.CodeProtect.UnitTests.csproj
@@ -37,6 +37,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>IDE0001,IDE0002,IDE0003</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -77,7 +78,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AdvancedDelimitedListTraceListenerUnitTest.cs" />
     <Compile Include="CommonDefinitions.cs" />
+    <Compile Include="Instrumentation\Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ManifestManagementUnitTest.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -90,6 +93,7 @@
     <Compile Include="LibInstallerUnitTest.cs" />
     <Compile Include="IsLicensedUnitTest.cs" />
     <Compile Include="CodeProtectHelpersUnitTest.cs" />
+    <Compile Include="LicenseTraceSourceUnitTest.cs" />
     <Compile Include="UnlockKeyAssemblyContainerUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
