--- a/CAS.CodeProtect.UnitTests/app.config
+++ b/CAS.CodeProtect.UnitTests/app.config
@@ -1,15 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="CAS.Lib.CodeProtect.Tests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-        </sectionGroup>
-    </configSections>
-    <applicationSettings>
-        <CAS.Lib.CodeProtect.Tests.Properties.Settings>
-            <setting name="Product" serializeAs="String">
-                <value>CAS.LibCodeProtectTests</value>
-            </setting>
-        </CAS.Lib.CodeProtect.Tests.Properties.Settings>
-    </applicationSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CAS.Lib.CodeProtect.Tests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    </sectionGroup>
+  </configSections>
+  <applicationSettings>
+    <CAS.Lib.CodeProtect.Tests.Properties.Settings>
+      <setting name="Product" serializeAs="String">
+        <value>CAS.LibCodeProtectTests</value>
+      </setting>
+    </CAS.Lib.CodeProtect.Tests.Properties.Settings>
+  </applicationSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+  </startup>
+  <system.diagnostics>
+    <sources>
+      <source name="CAS.CodeProtect.UnitTests.TraceSource" switchName="CAS.CodeProtect.UnitTests.TraceSource.Switch" switchType="System.Diagnostics.SourceSwitch">
+        <listeners>
+          <add name="LogFile" />
+          <remove name="Default" />
+        </listeners>
+      </source>
+      <source name="CAS.CodeProtect.TraceSource" switchName="CAS.CodeProtect.TraceSource.Switch" switchType="System.Diagnostics.SourceSwitch">
+        <listeners>
+          <add name="LogFile" />
+          <remove name="Default" />
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <add name="CAS.CodeProtect.UnitTests.TraceSource.Switch" value="All" />
+      <add name="CAS.CodeProtect.TraceSource.Switch" value="All" />
+    </switches>
+    <sharedListeners>
+      <add name="LogFile" type="CAS.Lib.CodeProtect.EnvironmentAccess.AdvancedDelimitedListTraceListener, CAS.CodeProtect" initializeData="|ApplicationDataPath|\CAS.RealTimeUnitTests.log" traceOutputOptions="DateTime">
+        <filter type="System.Diagnostics.EventTypeFilter" initializeData="All" />
+      </add>
+    </sharedListeners>
+  </system.diagnostics>
+
+</configuration>
