--- a/CAS.CodeProtect/CAS.CodeProtect.csproj
+++ b/CAS.CodeProtect/CAS.CodeProtect.csproj
@@ -68,6 +68,7 @@
     <DocumentationFile>bin\Release\CAS.CodeProtect.XML</DocumentationFile>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>IDE0001,IDE0002,IDE0003</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Build.Tasks.Core, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -83,6 +84,7 @@
   <ItemGroup>
     <Compile Include="AssemblyHelperAttribute.cs" />
     <Compile Include="AssemblyKeyAttribute.cs" />
+    <Compile Include="EnvironmentAccess\AdvancedDelimitedListTraceListener.cs" />
     <Compile Include="EnvironmentAccess\UnlockKeyAssemblyContainer.cs" />
     <Compile Include="EnvironmentAccess\CodeProtectHelpers.cs" />
     <Compile Include="EnvironmentAccess\FileNames.cs" />
@@ -134,6 +136,12 @@
     <Compile Include="LicenseDsc\AbstractLicenseData.cs" />
     <Compile Include="LicenseDsc\IConstraint.cs" />
     <Compile Include="LicenseDsc\ILicenseData.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <None Include="app.config" />
     <None Include="cas.snk" />
     <Compile Include="LicenseDsc\Constraints\ProcessorConstraint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -180,6 +188,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CAS.CodeProtect.tt</DependentUpon>
       <SubType>Designer</SubType>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <None Include="Resources\keys.xml" />
   </ItemGroup>
