--- a/CAS.CodeProtect/CAS.CodeProtect.nuspec
+++ b/CAS.CodeProtect/CAS.CodeProtect.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>CAS.CodeProtect</id>
-    <version>6.0.1 </version>
+    <version>6.1.3 </version>
     <title>CAS.CodeProtect</title>
     <authors>CAS</authors>
     <owners>commsvr.com</owners>
@@ -24,6 +24,7 @@
   </metadata>
   <files>
     <file src="bin\Release\CAS.CodeProtect.dll" target="lib\net451\CAS.CodeProtect.dll" />
+    <file src="bin\Release\CAS.CodeProtect.dll.config" target="lib\net451\CAS.CodeProtect.dll.config" />
     <file src="bin\Release\CAS.CodeProtect.XML" target="lib\net451\CAS.CodeProtect.XML" />
     <file src="bin\Release\Microsoft.Build.Framework.dll" target="lib\net451\Microsoft.Build.Framework.dll" />
     <file src="bin\Release\Microsoft.Build.Tasks.Core.dll" target="lib\net451\Microsoft.Build.Tasks.Core.dll" />
