--- a/CAS.CodeProtect/CAS.CodeProtect.nuspec
+++ b/CAS.CodeProtect/CAS.CodeProtect.nuspec
@@ -19,7 +19,7 @@
     <releaseNotes>
        Contains previously released component. 
 	  </releaseNotes>
-    <copyright>Copyright (c) 2000-2016 CAS LODZ POLAND</copyright>
+    <copyright>Copyright (c) 2017 CAS LODZ POLAND</copyright>
     <tags>CAS Software, CAS Framework, CAS Library, Licensing.</tags>
   </metadata>
   <files>
