Remove dependency on CodeProtect from the Real-time library #5
fixes #5

--- a/CAS.CodeProtect/CAS.CodeProtect.csproj
+++ b/CAS.CodeProtect/CAS.CodeProtect.csproj
@@ -85,6 +85,7 @@
     <Compile Include="AssemblyHelperAttribute.cs" />
     <Compile Include="AssemblyKeyAttribute.cs" />
     <Compile Include="EnvironmentAccess\AdvancedDelimitedListTraceListener.cs" />
+    <Compile Include="RelativeFilePathsCalculator.cs" />
     <Compile Include="EnvironmentAccess\UnlockKeyAssemblyContainer.cs" />
     <Compile Include="EnvironmentAccess\CodeProtectHelpers.cs" />
     <Compile Include="EnvironmentAccess\FileNames.cs" />
