--- a/CAS.CodeProtect.UnitTests/CAS.CodeProtect.UnitTests.csproj
+++ b/CAS.CodeProtect.UnitTests/CAS.CodeProtect.UnitTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{29C1EAE8-85A5-4E80-8783-ACA4EC24B862}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CAS.CodeProtect.UnitTests</RootNamespace>
-    <AssemblyName>CAS.CodeProtect.UnitTests</AssemblyName>
+    <RootNamespace>UAOOI.CodeProtect</RootNamespace>
+    <AssemblyName>UAOOI.CodeProtect.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
